# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp
filters/: apply_matrix.cpp  apply_matrix.h  base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gray_scale.cpp  gray_scale.h  my_filter.cpp  my_filter.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
image/: image.cpp  image.h  open_save.cpp  open_save.h  rgb.cpp  rgb.h
parser/: parser.cpp  parser.h
tests/: test_filters.cpp  test_read_save.cpp
